<resources>
    <string name="app_name">eTickets</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">View Settings</string>
    <string name="notifications_header">Notifications</string>

    <!-- Messages Preferences -->
    <string name="text_size_title">Text Size</string>
    <string name="color_title">Text Color</string>
    <string name="color_values">Text Color</string>


    <!-- NOTIFICATIONS STRING -->
    <string name="notifications_title">Allow notifications</string>
    <string name="channel_name">channelName</string>
    <string name="channel_description">channelDescription</string>


    <!-- Other Strings -->
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="titulli_i_eventit">Titulli i eventit</string>
    <string name="autori_nehar_jashari">Autori: Nehar Jashari</string>
    <string name="date_created_17_05_1998">Date Created: 17-05-1998</string>
    <string name="price_event">20.00 $</string>
    <string name="your_tickets">Your Tickets</string>
    <string name="delete_user">Delete User</string>
    <string name="token">Token:</string>
    <string name="tv_user_email">TextView</string>
    <string name="email_user">Email:</string>
    <string name="tv_user_fullname">TextView</string>
    <string name="events_created_by_you">Events Created By You</string>
    <string name="qr_code_tv">QR code for your ticket Use this code as a ticket for the event   You can take a screenshot of this or access it on the Your Tickets Page</string>
    <string name="get_to_main_page">Get to main page</string>
    <string name="full_name">Full Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="create_account_hint">Create Account</string>
    <string name="tv_qr_code">QR code generated Use this code as a ticket for the event   You can take a screenshot of this or access it on the Your Tickets Page</string>
    <string name="edt_value">Titulli i Eventit + ID-ja e eventit</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="password_hint_login">Password</string>
    <string name="email_hint_login">Email</string>
    <string name="textview_dateCreated">TextView</string>
    <string name="textview_author">TextView</string>
</resources>
